# awl-next

./: .dockerignore  .gitignore  ACCESSIBILITY.md  AGENTS.md  ARCHITECTURE.md  CAPTURE.md  CLAUDE.md  CREDITS.md  Cargo.toml  DESIGN.md  Dockerfile.linux  GUIDE.md  NOTICE  PHILOSOPHY.md  README.md  RELEASING.md  ROADMAP.md  SCOPE.md  THEMES.md  THIRD-PARTY-LICENSES.md  Trunk.toml  WEB.md  WORLD-ROLES.md  WORLDS.md  about.hbs  about.toml  index.html  run-linux.sh  site-loader.js
.cargo/: config.toml
.codex/: orchestrator
.github/workflows/: ci.yml  deploy-web.yml  release.yml
.orchestrator/: README.md  queue.md
.orchestrator/handoffs/: 2026-07-14-live-world.md
.orchestrator/reports/: 2026-07-16-architecture-pass.md  2026-07-16-codex-gpu-review.md  2026-07-16-codex-keymap-review.md  2026-07-17-codex-pdf-review.md  2026-07-19-stray-ref-equivalence-audit.md  2026-07-23-landed-queue-items.md  COMMAND-REPORT-2026-07-09.md  KEYBINDING-REPORT-2026-07-09.md  MORNING-REPORT-2026-07-10.md  focus-inventory.md  polish-queue.md
assets/: keymap-defaults.toml
assets/dict/: LICENSES.md
assets/fonts/: LICENSE-BitstreamVera.txt  LICENSES.md
benches/: README.md  baseline.json
benches/fixtures/: long_bullets.md  long_plain.txt
docs/: config.md  fonts.md  licensing.md  markdown.md  platform.md  render.md  syntax.md
packaging/mas/: entitlements.plist
samples/: bullets.md  chinese.md  image-reveal.md  japanese.md  korean.md  longwrap.md  mixed-cjk.md  prose.md  spellcheck.md  tables.md  tour.md  welcome.md  wide-table.md
samples/syntax/: bash.sh  c.c  cpp.cpp  csharp.cs  css.css  go.go  html.html  java.java  javascript.js  json.json  kotlin.kt  php.php  python.py  ruby.rb  rust.rs  sql.sql  swift.swift  toml.toml  typescript.ts  yaml.yaml
scenarios/: abort-unsupported.toml  demo.md  demo.toml
scripts/: audit.sh  bench.sh  build-linux.sh  capture-worlds.sh  capture.sh  ci-live-probe.sh  live-probe.sh  package-macos.sh  probe-shot-check.py  site-links.sh  smoke-export-html.sh  smoke-menus.sh  web-smoke.sh  with-remap.sh  world-gallery-specimen.md
shaders/: background.wgsl  blur.wgsl  caret.wgsl  caret_glyph.wgsl  image.wgsl  lava.wgsl  selection.wgsl  spellunderline.wgsl
site/: .dockerignore  Caddyfile  Dockerfile  README.md  check.html  check.js  check.test.js  credits.html  fly.toml  guide.html  index.html  llms.txt  sample.md  serve.sh  style.css
site/editor/: awl-347842567538f209.js  awl-6d0ca04e4f75c16e.js  awl-cdacdf39bafd48cd.js  index.html
src/: about.rs  actions.rs  app.rs  assets.rs  background.rs  bench.rs  buffer.rs  buffers.rs  capture.rs  card.rs  caret.rs  caret_glyph.rs  clock.rs  commands.rs  config.rs  convention.rs  crashlog.rs  credits.rs  cursor_shape.rs  daemon.rs  dateformat.rs  debug.rs  docs_catalog_law.rs  durable.rs  ease.rs  embedded_docs.rs  embedded_docs_law.rs  facets.rs  focus.rs  fold.rs  fps.rs  frontmatter.rs  fs.rs  fuzzy.rs  guide.rs  history.rs  hud.rs  image_pipeline.rs  index.rs  keymap.rs  (+53 more)
src/actions/: edit.rs  flinch.rs  format.rs  link.rs  motion.rs  overlay_nav.rs  popover.rs  rebind.rs  tests.rs
src/actions/tests/: folds.rs  format_editing.rs  mod.rs  overlay_drive.rs  picker_misc_smoke.rs  pickers_nav.rs  recoil_flinch.rs  save_feedback.rs
src/app/: apply.rs  apply_tests.rs  clock_law.rs  crossing.rs  daemon.rs  files.rs  gpu.rs  input.rs  menu.rs  present_txn.rs  probe.rs  schedule.rs  session.rs  stats.rs  streaks.rs  tests.rs  viewstate.rs  window.rs
src/app/input/: drags.rs  keys.rs  mod.rs  mouse.rs  tests.rs
src/app/tests/: buffers.rs  common.rs  files.rs  history.rs  lifecycle.rs  source_audit.rs  spell.rs  which_key.rs
src/buffer/: edit.rs  focus.rs  motion.rs  notes.rs  selection.rs  tests.rs  undo.rs
src/capture/: animated.rs  film.rs  frames.rs  gpu.rs  modes.rs  opts.rs  oracle.rs  sidecar.rs  tests.rs
src/capture/tests/: caret_streak.rs  folds.rs  i18n_fixtures.rs  mod.rs  panels.rs  pickers_faceted.rs  schema_chrome.rs
src/caret/: juice.rs  morph.rs  pipeline.rs  preview.rs  spring.rs  tests.rs
src/caret/tests/: impact.rs  mod.rs  mode.rs  spring_settle.rs  streak_underline.rs  trail.rs
src/config/: apply.rs  mod.rs  model.rs  tests.rs  write.rs
src/export/: docx.rs  html.rs  mod.rs  model.rs  tests.rs  zip.rs
src/export/pdf/: flow.rs  fonts.rs  images.rs  inline.rs  layout.rs  manifest.rs  mod.rs  tests.rs  writer.rs
src/export/testdata/: rich.docx  rich.html  tiny.jpg.b64
src/fold/: tests.rs
src/history/: mod.rs  picker.rs  prune.rs  store.rs  tests.rs
src/main/: args.rs  run.rs  story.rs
src/markdown/: conceal.rs  headings.rs  mod.rs  refs.rs  spans.rs  tables.rs  tests.rs
src/overlay/: build.rs  capture.rs  facet.rs  kind.rs  mod.rs  nav.rs  state.rs  tests.rs
src/render/: blur.rs  caret.rs  caretbench.rs  chrome.rs  dither.rs  focus.rs  framebench.rs  geometry.rs  image_cache.rs  layers.rs  livingband.rs  perfbench.rs  pipeline_draw.rs  pipeline_geometry.rs  pipeline_layers.rs  pipeline_overlay.rs  pipeline_prepare.rs  rects.rs  reports.rs  rowgeom.rs  rowlayout.rs  spans.rs  tests.rs  text.rs  viewstate_def.rs
src/render/benchsuite/: corpus.rs  cx.rs  mod.rs  report.rs  scenarios.rs
src/render/chrome/: debug_text.rs  gutter.rs  hud.rs  menubar.rs  mod.rs  outline.rs  overlay.rs  overlay_draw.rs  overlay_rows.rs  overlay_shape.rs  panel.rs  popover.rs  preview.rs  readout.rs  theme_picker.rs  whichkey.rs
src/render/tests/: backgrounds_item69.rs  build_integrity.rs  caret.rs  (+45 more)
src/search/: keys.rs  mod.rs
src/soak_gpu/: mod.rs  report.rs
src/syntax/: bash.rs  c.rs  cpp.rs  csharp.rs  css.rs  go.rs  html.rs  java.rs  javascript.rs  json.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  sql.rs  swift.rs  toml.rs  typescript.rs  yaml.rs
src/theme/: cjk.rs  color.rs  derive.rs  mod.rs  model.rs  ornament.rs  tests.rs  worlds.rs
test/export-html/: package.json  smoke.mjs
tests/: bullet_blank_line_nit_pixels.rs  fault_kill9.rs  frost_rail_pixels.rs  hermetic_canary.rs  storyboard_film.rs  world_gallery_roster.rs
tests/fixtures/: doc-fixture.md
(+3 files in other folders)
