[package]
name = "awl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
glyphon = "0.11.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
pollster = "0.4.0"
pulldown-cmark = { version = "0.12", default-features = false }
raw-window-handle = "0.6.2"
ropey = "1.6.1"
spellbook = "0.4.2"
toml = { version = "0.8", default-features = false, features = ["parse"] }
wgpu = "=29.0.3"
winit = "0.30"

# --- Native-only deps -------------------------------------------------------
# arboard (the OS clipboard) links platform clipboard backends (objc / X11 /
# windows) that DON'T compile for wasm32-unknown-unknown, and the browser
# clipboard is a different, async/permission-gated API anyway. So it is a
# native-only dependency; `app.rs` swaps in a no-op `Clipboard` stub on wasm
# (the editor runs on the internal kill-ring there). Native is untouched.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3"

# --- macOS-only dep ---------------------------------------------------------
# The DEBUG panel's live `gpu N MB` line reads Metal's
# `MTLDevice.currentAllocatedSize` off the raw device wgpu-hal hands back via
# `Device::as_hal::<Metal>()`. That handle is an `objc2-metal` `MTLDevice` protocol
# object, so we pull the SAME `objc2-metal` version wgpu-hal 29 uses (0.3.2) purely to
# bring the `MTLDevice` trait method into scope. Mac-only; Linux/Vulkan + wasm/WebGPU
# have no cheap query and show `gpu —`. (Cargo unifies this with wgpu-hal's own copy —
# same crate instance, no duplicate build.)
[target.'cfg(target_os = "macos")'.dependencies]
objc2-metal = { version = "0.3.2", default-features = false, features = ["MTLDevice"] }
# The native macOS MENU BAR (App/File/Edit/View/Window — `src/menu.rs`). muda
# is tauri's winit-compatible cross-platform menu crate; `default-features =
# false` drops its `libxdo`/`gtk` defaults, which are Linux-only optional deps
# that never build against a non-Linux target anyway but are disabled
# explicitly for a lean mac-only dependency graph. Mac-only for now (SCOPE:
# Linux/wasm never see a menu bar in v1 — muda supports gtk on Linux, but
# wiring it is left for a future round; wasm has no native chrome at all).
muda = { version = "0.19.3", default-features = false }

# --- wasm (browser) deps ----------------------------------------------------
# Only pulled in for the wasm32 target, so the native build is byte-identical.
# wgpu gains its WebGL fallback backend here (WebGPU isn't universal yet); the
# bindgen/web-sys/console crates wire the canvas, panic hook, and logging; and
# web-time supplies a browser `Instant`/`SystemTime` (std's panics on wasm).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "=29.0.3", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
web-time = "1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Storage",
] }

[dev-dependencies]
serde_json = "1.0.150"
