[package]
name = "awl"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.102"
glyphon = "0.11.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
pollster = "0.4.0"
pulldown-cmark = { version = "0.12", default-features = false }
raw-window-handle = "0.6.2"
# LINE-ENDING MODEL (VS Code): the buffer is PURELY '\n'-based. We drop ropey's
# default `unicode_lines` (and its `cr_lines`) feature so the rope's line metrics
# (`len_lines`/`char_to_line`/`line_to_char`) recognize ONLY LF as a break — never
# CR, CRLF, NEL, LS or PS. CRLF is normalized to LF on load (see `Buffer::from_file`
# + `Eol`) so the rope never holds a '\r\n', and a lone '\r'/NEL/LS/PS stays literal
# CONTENT within its line (matching VS Code), which is exactly what LF-only counting
# gives. `simd` is kept for the index-math speedup. See the "Line endings" section
# of CLAUDE.md.
ropey = { version = "1.6.1", default-features = false, features = ["simd"] }
spellbook = "0.4.2"
toml = { version = "0.8", default-features = false, features = ["parse"] }
wgpu = "=29.0.3"
winit = "0.30"

# --- Native-only deps -------------------------------------------------------
# arboard (the OS clipboard) links platform clipboard backends (objc / X11 /
# windows) that DON'T compile for wasm32-unknown-unknown, and the browser
# clipboard is a different, async/permission-gated API anyway. So it is a
# native-only dependency; `app.rs` swaps in a no-op `Clipboard` stub on wasm
# (the editor runs on the internal kill-ring there). Native is untouched.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3"

# --- macOS-only dep ---------------------------------------------------------
# The DEBUG panel's live `gpu N MB` line reads Metal's
# `MTLDevice.currentAllocatedSize` off the raw device wgpu-hal hands back via
# `Device::as_hal::<Metal>()`. That handle is an `objc2-metal` `MTLDevice` protocol
# object, so we pull the SAME `objc2-metal` version wgpu-hal 29 uses (0.3.2) purely to
# bring the `MTLDevice` trait method into scope. Mac-only; Linux/Vulkan + wasm/WebGPU
# have no cheap query and show `gpu —`. (Cargo unifies this with wgpu-hal's own copy —
# same crate instance, no duplicate build.)
[target.'cfg(target_os = "macos")'.dependencies]
objc2-metal = { version = "0.3.2", default-features = false, features = ["MTLDevice"] }
# The native macOS MENU BAR (App/File/Edit/View/Window — `src/menu.rs`). muda
# is tauri's winit-compatible cross-platform menu crate; `default-features =
# false` drops its `libxdo`/`gtk` defaults, which are Linux-only optional deps
# that never build against a non-Linux target anyway but are disabled
# explicitly for a lean mac-only dependency graph. Mac-only for now (SCOPE:
# Linux/wasm never see a menu bar in v1 — muda supports gtk on Linux, but
# wiring it is left for a future round; wasm has no native chrome at all).
muda = { version = "0.19.3", default-features = false }
# Native macOS chrome for two MENU items that dodge the in-app overlay path:
# File "Open..." -> NSOpenPanel (the standard file picker) and About ->
# NSApplication's standard About panel. Both live ONLY behind
# `cfg(target_os = "macos")` in `src/mac_chrome.rs`; every other platform keeps
# the existing in-app behavior. Versions MATCH the copies muda 0.19.3 already
# unifies into the graph (objc2 0.6, objc2-app-kit/-foundation 0.3.2), so Cargo
# builds one instance - no duplicate objc2 stack.
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSApplication",
    "NSResponder",
    "NSPanel",
    "NSWindow",
    "NSSavePanel",
    "NSOpenPanel",
    # SF-Symbol -> RGBA rasterization for the menu icons (`menu_icons.rs`, via
    # `mac_chrome::render_symbol_rgba`): NSImage (+ its NSImageSymbolConfiguration),
    # the NSImageRep/NSBitmapImageRep backing store, an NSGraphicsContext to draw
    # into it, NSGraphics for `drawInRect:` + the color-space-name/compositing
    # constants, NSFontDescriptor for the symbol weight, and objc2-core-foundation
    # for CGFloat/geometry.
    "NSImage",
    "NSImageRep",
    "NSBitmapImageRep",
    "NSGraphicsContext",
    "NSGraphics",
    "NSFontDescriptor",
    "objc2-core-foundation",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSString",
    "NSURL",
    "NSDictionary",
    "NSAttributedString",
    "NSObject",
    # NSRect/NSPoint/NSSize (+ CGFloat) for the symbol-rasterization draw rect.
    "NSGeometry",
    "objc2-core-foundation",
] }

# --- wasm (browser) deps ----------------------------------------------------
# Only pulled in for the wasm32 target, so the native build is byte-identical.
# wgpu gains its WebGL fallback backend here (WebGPU isn't universal yet); the
# bindgen/web-sys/console crates wire the canvas, panic hook, and logging; and
# web-time supplies a browser `Instant`/`SystemTime` (std's panics on wasm).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "=29.0.3", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
web-time = "1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Storage",
] }

[dev-dependencies]
serde_json = "1.0.150"
