[package]
name = "awl"
version = "0.1.0"
edition = "2024"
# GPL-3.0-only (not "-or-later"): a deliberate, flippable choice — "-only" pins
# distribution to this exact license version; switching to "-or-later" (letting
# a downstream redistribute under any FUTURE GPL version too) is a one-line
# change here + in `NOTICE`/`LICENSE`'s header framing whenever the sole
# copyright holder decides to make it. See `NOTICE` for the full grant text and
# `CREDITS.md`/`THIRD-PARTY-LICENSES.md` for what's bundled alongside it.
# Copyright (C) 2026 Frank Lu.
license = "GPL-3.0-only"

# --- MAS (Mac App Store / App Sandbox) flavor -------------------------------
# OFF by default — the default build is unaffected byte-for-byte (see
# `src/mas.rs`'s module doc + CLAUDE.md's MAS section). Under `--features mas`:
# the single-instance daemon (`src/daemon.rs`) compiles OUT (Launch Services
# already prevents a second launch of a sandboxed app, and MAS has no CLI
# handoff story), and the security-scoped-bookmark folder-grant machinery
# (`src/mas.rs`) compiles IN. The two extra `objc2-foundation` sub-features
# below are needed ONLY for the security-scoped-bookmark NSURL methods
# (`bookmarkDataWithOptions…`/`URLByResolvingBookmarkData…`) — enabled via
# dependency-feature unification so the default (no-`mas`) build's dependency
# feature set is completely unchanged.
[features]
mas = ["objc2-foundation/NSArray", "objc2-foundation/NSData"]

[dependencies]
anyhow = "1.0.102"
glyphon = "0.11.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
pollster = "0.4.0"
pulldown-cmark = { version = "0.12", default-features = false }
raw-window-handle = "0.6.2"
# LINE-ENDING MODEL (VS Code): the buffer is PURELY '\n'-based. We drop ropey's
# default `unicode_lines` (and its `cr_lines`) feature so the rope's line metrics
# (`len_lines`/`char_to_line`/`line_to_char`) recognize ONLY LF as a break — never
# CR, CRLF, NEL, LS or PS. CRLF is normalized to LF on load (see `Buffer::from_file`
# + `Eol`) so the rope never holds a '\r\n', and a lone '\r'/NEL/LS/PS stays literal
# CONTENT within its line (matching VS Code), which is exactly what LF-only counting
# gives. `simd` is kept for the index-math speedup. See the "Line endings" section
# of CLAUDE.md.
ropey = { version = "1.6.1", default-features = false, features = ["simd"] }
spellbook = "0.4.2"
toml = { version = "0.8", default-features = false, features = ["parse"] }
wgpu = "=29.0.3"
winit = "0.30"

# --- Native-only deps -------------------------------------------------------
# arboard (the OS clipboard) links platform clipboard backends (objc / X11 /
# windows) that DON'T compile for wasm32-unknown-unknown, and the browser
# clipboard is a different, async/permission-gated API anyway. So it is a
# native-only dependency; `app.rs` swaps in a no-op `Clipboard` stub on wasm
# (the editor runs on the internal kill-ring there). Native is untouched.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# wayland-data-control pulls in wl-clipboard-rs so arboard can talk to a pure
# Wayland compositor's data-control protocol (Hyprland, Sway, ...) — without
# it arboard defaults to X11-only on Linux and Clipboard::new() fails outright
# under a pure-Wayland session (no XWayland), silently degrading to the
# internal kill-ring mirror. macOS/Windows are unaffected (the feature only
# adds a Linux-only code path inside arboard).
arboard = { version = "3", features = ["wayland-data-control"] }

# --- macOS-only dep ---------------------------------------------------------
# The DEBUG panel's live `gpu N MB` line reads Metal's
# `MTLDevice.currentAllocatedSize` off the raw device wgpu-hal hands back via
# `Device::as_hal::<Metal>()`. That handle is an `objc2-metal` `MTLDevice` protocol
# object, so we pull the SAME `objc2-metal` version wgpu-hal 29 uses (0.3.2) purely to
# bring the `MTLDevice` trait method into scope. Mac-only; Linux/Vulkan + wasm/WebGPU
# have no cheap query and show `gpu —`. (Cargo unifies this with wgpu-hal's own copy —
# same crate instance, no duplicate build.)
[target.'cfg(target_os = "macos")'.dependencies]
objc2-metal = { version = "0.3.2", default-features = false, features = ["MTLDevice"] }
# LIVE-RESIZE content-stretch fix (`Gpu::set_presents_with_transaction`,
# `app/gpu.rs`): toggles the raw `CAMetalLayer`'s `presentsWithTransaction`
# flag (via `Surface::as_hal::<Metal>()`'s `render_layer()`) so a present JOINS
# AppKit's own resize Core-Animation transaction instead of racing it — without
# this, a FAST live-resize drag can show the compositor stretching the last
# frame to the new bounds. Same version-matching convention as `objc2-metal`
# just above: pull the SAME `objc2-quartz-core` version wgpu-hal 29 already
# uses (0.3.2), `default-features = false` + only the one feature
# (`CALayer`, which gates `CAMetalLayer` itself) needed to name the type in a
# doc-comment / keep the dependency edge explicit — Cargo unifies this with
# wgpu-hal's own copy, no duplicate build.
objc2-quartz-core = { version = "0.3.2", default-features = false, features = ["CALayer"] }
# The native macOS MENU BAR (App/File/Edit/View/Window — `src/menu.rs`). muda
# is tauri's winit-compatible cross-platform menu crate; `default-features =
# false` drops its `libxdo`/`gtk` defaults, which are Linux-only optional deps
# that never build against a non-Linux target anyway but are disabled
# explicitly for a lean mac-only dependency graph. Mac-only for now (SCOPE:
# Linux/wasm never see a menu bar in v1 — muda supports gtk on Linux, but
# wiring it is left for a future round; wasm has no native chrome at all).
muda = { version = "0.19.3", default-features = false }
# Native macOS chrome for two MENU items that dodge the in-app overlay path:
# File "Open..." -> NSOpenPanel (the standard file picker) and About ->
# NSApplication's standard About panel. Both live ONLY behind
# `cfg(target_os = "macos")` in `src/mac_chrome.rs`; every other platform keeps
# the existing in-app behavior. Versions MATCH the copies muda 0.19.3 already
# unifies into the graph (objc2 0.6, objc2-app-kit/-foundation 0.3.2), so Cargo
# builds one instance - no duplicate objc2 stack.
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSApplication",
    "NSResponder",
    "NSPanel",
    "NSWindow",
    "NSSavePanel",
    "NSOpenPanel",
    # SF-Symbol -> RGBA rasterization for the menu icons (`menu_icons.rs`, via
    # `mac_chrome::render_symbol_rgba`): NSImage (+ its NSImageSymbolConfiguration),
    # the NSImageRep/NSBitmapImageRep backing store, an NSGraphicsContext to draw
    # into it, NSGraphics for `drawInRect:` + the color-space-name/compositing
    # constants, NSFontDescriptor for the symbol weight, and objc2-core-foundation
    # for CGFloat/geometry.
    "NSImage",
    "NSImageRep",
    "NSBitmapImageRep",
    "NSGraphicsContext",
    "NSGraphics",
    "NSFontDescriptor",
    "objc2-core-foundation",
    # Walking the installed menu bar's real NSMenu/NSMenuItem tree to mark each
    # routed icon's NSImage a TEMPLATE image (`mac_chrome::mark_menu_icons_as_templates`,
    # called right after `crate::menu::install`'s `Menu::init_for_nsapp()`) — so
    # AppKit tints the icon to the current appearance's label ink (and the
    # correct on-highlight tint) instead of a fixed pre-baked gray. `NSMenu`
    # brings `NSApplication::mainMenu`/`itemArray` into scope too (both are
    # `#[cfg(feature = "NSMenu")]`-gated in objc2-app-kit).
    "NSMenu",
    "NSMenuItem",
    # ACCESSIBILITY TIER 1 (`motion.rs`'s `mac_chrome::system_reduce_motion`):
    # `NSWorkspace.accessibilityDisplayShouldReduceMotion` — the OS-level
    # Reduce Motion preference, consulted ONCE at live startup (never in a
    # headless capture) to seed the `motion::reduced()` process-global. The
    # method lives in objc2-app-kit's own separately-gated "NSAccessibility"
    # category module (not just "NSWorkspace" — both are required).
    "NSWorkspace",
    "NSAccessibility",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSString",
    "NSURL",
    "NSDictionary",
    "NSAttributedString",
    "NSObject",
    # NSRect/NSPoint/NSSize (+ CGFloat) for the symbol-rasterization draw rect.
    "NSGeometry",
    # NSFileManager `trashItemAtURL:resultingItemURL:error:` — the RECOVERABLE
    # delete the Asset Cleaner routes through (`mac_chrome::trash_path`); NSError
    # carries the failure message. Already-in-tree door, no new crate.
    "NSFileManager",
    "NSError",
    "objc2-core-foundation",
] }

# --- wasm (browser) deps ----------------------------------------------------
# Only pulled in for the wasm32 target, so the native build is byte-identical.
# wgpu gains its WebGL fallback backend here (WebGPU isn't universal yet); the
# bindgen/web-sys/console crates wire the canvas, panic hook, and logging; and
# web-time supplies a browser `Instant`/`SystemTime` (std's panics on wasm).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "=29.0.3", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
web-time = "1"
# Explicit direct dep (was already transitive via wasm-bindgen/web-sys at the
# identical locked version): the WEB ESCAPE HATCHES round's "Download file"
# command builds a plain JS `Array` of Blob parts (`web_export.rs`).
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Storage",
    "Navigator",
    # ACCESSIBILITY TIER 1 (`motion.rs`): `window.matchMedia("(prefers-reduced-
    # motion: reduce)")` — the `auto` half of the web build's config→OS reduce-
    # motion ladder, read ONCE at `wasm_start`.
    "MediaQueryList",
    # WEB ESCAPE HATCHES round (`web_export.rs` — "Download file"; `app.rs`'s
    # `sync_kill_to_clipboard`/`refresh_kill_from_clipboard` async mirror):
    # Blob + object-URL + synthetic `<a download>` click, and the browser
    # Clipboard API (`navigator.clipboard.writeText`/`readText`).
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "Clipboard",
    "Permissions",
    "PermissionStatus",
    "PermissionState",
] }

[dev-dependencies]
serde_json = "1.0.150"
# PNG decode for the RENDERED-PIXEL frost regression (`tests/frost_rail_pixels.rs`,
# the appearance-oracle guard CLAUDE.md's tripwire demands). Same version + feature
# set as the runtime `image` dependency above, so no extra crate is compiled — a
# dev-dep is simply how an integration test (separate crate) reaches the decoder.
image = { version = "0.25.10", default-features = false, features = ["png"] }
# WGSL->GLSL ES 300 (WebGL2) offline shader validation for the DITHER round's
# shader changes (`render::tests::webgl_shader_validation`) — same naga
# version wgpu 29.0.3 already pulls in transitively, pinned exact so this
# never drifts from what actually ships. dev-only; not a runtime dependency.
naga = { version = "=29.0.3", features = ["wgsl-in", "glsl-out"] }
# The wasm32 core smoke suite (src/websmoke.rs). Compatible with the pinned
# wasm-bindgen 0.2.121; used only under `#[cfg(all(test, target_arch = "wasm32"))]`.
wasm-bindgen-test = "0.3"
